objects/Litigation__c.object
<CustomObject>
    <description>This object contains records related to any litigation that may be brought against a dispute decision.</description>
    <fields>
        <fullName>AdministrativeChallengeSummary__c</fullName>
        <label>Administrative Challenge Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>The case that this litigation matter relates to</description>
        <inlineHelpText>The case that this litigation matter relates to</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Litgation</relationshipLabel>
        <relationshipName>Litgation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CounselBilled__c</fullName>
        <label>Counsel Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CounselEstimate__c</fullName>
        <label>Counsel Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CounselReference__c</fullName>
        <label>Counsel Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourtReference__c</fullName>
        <label>Court Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court__c</fullName>
        <label>Court</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Court</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRSRole__c</fullName>
        <label>DRS Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitting</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>No appearance filed</fullName>
                </value>
                <value>
                    <fullName>Intervener</fullName>
                </value>
                <value>
                    <fullName>Amicus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecisionChallenged__c</fullName>
        <label>Decision Challenged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merit Review decision s44BB(1)(b)</fullName>
                </value>
                <value>
                    <fullName>Decline to Review/ Jurisdictional decision s44BB(3)(a)</fullName>
                </value>
                <value>
                    <fullName>Decline to Review/ Jurisdictional decision s44BB(3)(b)</fullName>
                </value>
                <value>
                    <fullName>Decline to Review/ Jurisdictional decision s44BB(3)(c)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JudgmentLink__c</fullName>
        <label>Judgment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>JudicialOfficers__c</fullName>
        <label>Judicial Officers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JudicialReviewOutcome__c</fullName>
        <label>Judicial Review Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decided - Set aside</fullName>
                </value>
                <value>
                    <fullName>Decided - Upheld</fullName>
                </value>
                <value>
                    <fullName>Discontinued - Upheld</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Settled - Set aside</fullName>
                </value>
                <value>
                    <fullName>Settled - Upheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextCourtDate__c</fullName>
        <label>Next Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NextCourtEvent__c</fullName>
        <label>Next court event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Directions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutcomeSummary__c</fullName>
        <label>Outcome summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProceedingsFiledByName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that filed these proceedings.</description>
        <label>Proceedings filed by name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Litgation filed</relationshipLabel>
        <relationshipName>Litgation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProceedingsFiledByRole__c</fullName>
        <description>The role that filed this legal proceeding</description>
        <inlineHelpText>The role that filed this legal proceeding</inlineHelpText>
        <label>Proceedings filed by role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insurer</fullName>
                </value>
                <value>
                    <fullName>Insurer Legal Rep</fullName>
                </value>
                <value>
                    <fullName>Worker</fullName>
                </value>
                <value>
                    <fullName>Worker Advocate</fullName>
                </value>
                <value>
                    <fullName>Worker Legal Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProceedingsFinalisedDate__c</fullName>
        <label>Proceedings finalised date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRIMReferenceNumber__c</fullName>
        <description>The reference number of the TRIM folder / file</description>
        <inlineHelpText>The reference number of the TRIM folder / file</inlineHelpText>
        <label>TRIM reference number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Litigation</label>
    <nameField>
        <label>Proceedings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Litgation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>